# itstep_cpp

./: .gitignore  123.cpp  CMakeLists.txt  README.md  com.cpp  db.json  haeders.h  main.cpp
module 10 - Struct/: kinopoisk.cpp  kinopoisk.h
module 2 - Data type/: DataType.cpp  DataType.h
module 3 - Conditions/: Conditions.cpp  Conditions.h
module 3 - If, switch/: Conditions.cpp  Conditions.h  case_1.cpp
module 5 - Array/: Array.cpp  Array.h  case_1.cpp  case_2.cpp
practics/: home_accounting.cpp  home_accounting.h
